--- a/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
+++ b/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
@@ -10,6 +10,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>TomPIT.IoT</RootNamespace>
+    <AssemblyName>TomPIT.IoT</AssemblyName>
   </PropertyGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
