--- a/Development/TomPIT.Design/TomPIT.Design.csproj
+++ b/Development/TomPIT.Design/TomPIT.Design.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>TomPIT</RootNamespace>
+    <RootNamespace>TomPIT.Design</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
