--- a/Development/TomPIT.Development/TomPIT.Development.csproj
+++ b/Development/TomPIT.Development/TomPIT.Development.csproj
@@ -13,12 +13,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.App"/>
+    <Compile Remove="Design\Services\**" />
+    <EmbeddedResource Remove="Design\Services\**" />
+    <None Remove="Design\Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
 	</ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Design\Services\" />
     <Folder Include="Items\" />
   </ItemGroup>
 
