--- a/Development/TomPIT.Templates.Application.Design/TomPIT.Templates.Application.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.Templates.Application.Design.csproj
@@ -1,33 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>TomPIT.Application</RootNamespace>
-    <AssemblyName>TomPIT.Application.Design</AssemblyName>
-  </PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-	</ItemGroup>
-
-	<ItemGroup>
-    <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
-    <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
-    <ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
-    <ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
-    <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
-    <ProjectReference Include="..\TomPIT.Templates.Application\TomPIT.Templates.Application.csproj" />
-  </ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Design\Security\" />
-	</ItemGroup>
-
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;c:\bin2&quot;" />
-	</Target>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup />
 </Project>
-
-
