--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -32,7 +32,13 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="1.1.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Extensions" Version="1.0.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="2.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Scripting.Common" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
