--- a/Development/TomPIT.Ide.UI/TomPIT.Ide.UI.csproj
+++ b/Development/TomPIT.Ide.UI/TomPIT.Ide.UI.csproj
@@ -13,6 +13,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Shell\**" />
+    <Content Remove="Views\Shell\**" />
+    <EmbeddedResource Remove="Views\Shell\**" />
+    <None Remove="Views\Shell\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
@@ -101,10 +108,6 @@
     <Content Update="Views\_ViewImports.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Shell\MultiTenant\" />
   </ItemGroup>
 
   <ItemGroup>
