--- a/Management/TomPIT.Management/TomPIT.Management.csproj
+++ b/Management/TomPIT.Management/TomPIT.Management.csproj
@@ -58,4 +58,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Designers\Toolbar\" />
+  </ItemGroup>
+
 </Project>
