--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -1,47 +1,46 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
     <SccAuxPath>SAK</SccAuxPath>
     <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>TomPIT</RootNamespace>
     <AssemblyName>TomPIT.Development.App</AssemblyName>
+    <AssemblyVersion>1.0.117.37</AssemblyVersion>
+    <FileVersion>1.0.117.37</FileVersion>
   </PropertyGroup>
-	<PropertyGroup>
-		<PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
-	</PropertyGroup>
-	<ItemGroup>
-	  <Compile Remove="Views\Shell\**" />
-	  <Content Remove="Views\Shell\**" />
-	  <EmbeddedResource Remove="Views\Shell\**" />
-	  <None Remove="Views\Shell\**" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Content Remove="compilerconfig.json" />
-	  <Content Remove="wwwroot\Assets\Styles\development.less" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="lz4net" Version="1.0.15.93" />
-		<PackageReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="1.1.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Extensions" Version="1.0.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.10.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Scripting.Common" Version="2.10.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+  <PropertyGroup>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Views\Shell\**" />
+    <Content Remove="Views\Shell\**" />
+    <EmbeddedResource Remove="Views\Shell\**" />
+    <None Remove="Views\Shell\**" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\Assets\Styles\development.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="lz4net" Version="1.0.15.93" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="1.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Extensions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting.Common" Version="2.10.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+  </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Ide\Designers\Upload.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
@@ -50,19 +49,16 @@
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\Assets\Fonts\OpenSans\" />
     <Folder Include="wwwroot\Assets\Libraries\DevExtreme\18.2.4\icons\" />
     <Folder Include="wwwroot\Assets\Libraries\Underscore\1.9.1\" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="compilerconfig.json" />
     <None Include="wwwroot\Assets\Images\Brand\safari-pinned-tab.svg" />
     <None Include="wwwroot\Assets\Styles\development.less" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
