--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
@@ -1,29 +1,26 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
     <SccAuxPath>SAK</SccAuxPath>
     <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>TomPIT.IoT</RootNamespace>
     <AssemblyName>TomPIT.IoT.Design</AssemblyName>
+    <AssemblyVersion>1.0.117.37</AssemblyVersion>
+    <FileVersion>1.0.117.37</FileVersion>
   </PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
-		<ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
-		<ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
-		<ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
-		<ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
-		<ProjectReference Include="..\TomPIT.Templates.IoT\TomPIT.Templates.IoT.csproj" />
-	</ItemGroup>
-
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;c:\bin2&quot;" />
-	</Target>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
+    <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
+    <ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
+    <ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
+    <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
+    <ProjectReference Include="..\TomPIT.Templates.IoT\TomPIT.Templates.IoT.csproj" />
+  </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;c:\bin2&quot;" />
+  </Target>
 </Project>
