--- a/Runtime/TomPIT.UI/TomPIT.UI.csproj
+++ b/Runtime/TomPIT.UI/TomPIT.UI.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.0.117.37</AssemblyVersion>
-    <FileVersion>1.0.117.37</FileVersion>
+    <AssemblyVersion>1.0.118.53</AssemblyVersion>
+    <FileVersion>1.0.118.53</FileVersion>
+    <Version>1.0.118.53</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -19,7 +20,4 @@
     <ProjectReference Include="..\TomPIT.Extensions\TomPIT.Extensions.csproj" />
     <ProjectReference Include="..\TomPIT.Runtime\TomPIT.Runtime.csproj" />
   </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).Views.dll&quot; &quot;c:\bin2&quot;" />
-  </Target>
 </Project>
