--- a/Management/TomPIT.Management.UI/compilerconfig.json
+++ b/Management/TomPIT.Management.UI/compilerconfig.json
@@ -18,5 +18,9 @@
   {
     "outputFile": "wwwroot/Assets/Styles/ide.css",
     "inputFile": "wwwroot/Assets/Styles/ide.less"
+  },
+  {
+    "outputFile": "wwwroot/Assets/Styles/Variables.css",
+    "inputFile": "wwwroot/Assets/Styles/Variables.less"
   }
 ]
