--- a/Development/TomPIT.Templates.Application.Design/TomPIT.Application.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.Application.Design.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>TomPIT.Application.Design</RootNamespace>
     <AssemblyName>TomPIT.Application.Design</AssemblyName>
-    <AssemblyVersion>1.0.118.53</AssemblyVersion>
-    <FileVersion>1.0.118.53</FileVersion>
-    <Version>1.0.118.53</Version>
+    <AssemblyVersion>1.0.120.7</AssemblyVersion>
+    <FileVersion>1.0.120.7</FileVersion>
+    <Version>1.0.120.7</Version>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Designers\Security\**" />
@@ -25,6 +25,6 @@
     <ProjectReference Include="..\TomPIT.Templates.Application\TomPIT.Application.csproj" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\bin2&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;c:\bin2&quot;" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.Application.Design&quot;" />
   </Target>
 </Project>
